--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,6 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="lib/firebase/firebase.js"></script>
@@ -26,7 +25,12 @@
 
   </head>
   <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
+    <div style="color:'#fff'" data-ng-if="$root.loadComplete !== 1">
+        Cargando...
+    </div>
+    <div data-ng-if="$root.loadComplete === 1">
+        <ion-nav-view></ion-nav-view> 
+    </div>
     <script src="js/dist/provised.js"></script>
   </body>
 </html>
